# hipscat

./: .clang-format  .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conftest.py  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  requirements.txt  setup.bash  setup.py  tree.py
.github/workflows/: add-issue-to-project-tracker.yml  asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  code_style.yml  linting.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  python-package.yml  smoke-test.yml  test-windows.yml  testing-and-coverage.yml  type-checking.yml
_results/: benchmarks.json
_results/gh-runner/: 005d780d-virtualenv-py3.10-Cython-build-packaging.json  014342d2-virtualenv-py3.10-Cython-build-packaging.json  03517804-virtualenv-py3.10-Cython-build-packaging.json  04596506-virtualenv-py3.10-Cython-build-packaging.json  047600e6-virtualenv-py3.10-Cython-build-packaging.json  05bf21de-virtualenv-py3.10-Cython-build-packaging.json  062e3633-virtualenv-py3.10-Cython-build-packaging.json  09821aa7-virtualenv-py3.10-Cython-build-packaging.json  09ebcb08-virtualenv-py3.10-Cython-build-packaging.json  0beafa68-virtualenv-py3.10-Cython-build-packaging.json  0c42a606-virtualenv-py3.10-Cython-build-packaging.json  0e5b0347-virtualenv-py3.10-Cython-build-packaging.json  0f958b0b-virtualenv-py3.10-Cython-build-packaging.json  10e527db-virtualenv-py3.10-Cython-build-packaging.json  1127da5b-virtualenv-py3.10-Cython-build-packaging.json  11a8182b-virtualenv-py3.10-Cython-build-packaging.json  147378fc-virtualenv-py3.10-Cython-build-packaging.json  1572b548-virtualenv-py3.10-Cython-build-packaging.json  18c389d5-virtualenv-py3.10-Cython-build-packaging.json  18c8d2ae-virtualenv-py3.10-Cython-build-packaging.json  1c911ad5-virtualenv-py3.10-Cython-build-packaging.json  1cb33bd3-virtualenv-py3.10-Cython-build-packaging.json  1df30af9-virtualenv-py3.10-Cython-build-packaging.json  1ebbbfe4-virtualenv-py3.10-Cython-build-packaging.json  1f9fb156-virtualenv-py3.10-Cython-build-packaging.json  20261fdc-virtualenv-py3.10-Cython-build-packaging.json  2083e591-virtualenv-py3.10-Cython-build-packaging.json  20eee15e-virtualenv-py3.10-Cython-build-packaging.json  220799b4-virtualenv-py3.10-Cython-build-packaging.json  22467ac2-virtualenv-py3.10-Cython-build-packaging.json  23ae2eee-virtualenv-py3.10-Cython-build-packaging.json  23e7ee3e-virtualenv-py3.10-Cython-build-packaging.json  247c9a99-virtualenv-py3.10-Cython-build-packaging.json  251c13d0-virtualenv-py3.10-Cython-build-packaging.json  2852c247-virtualenv-py3.10-Cython-build-packaging.json  293a76d8-virtualenv-py3.10-Cython-build-packaging.json  29fb459e-virtualenv-py3.10-Cython-build-packaging.json  2a7ea9e2-virtualenv-py3.10-Cython-build-packaging.json  2b52ff61-virtualenv-py3.10-Cython-build-packaging.json  2c4a9f1f-virtualenv-py3.10-Cython-build-packaging.json  (+184 more)
benchmarks/: asv.conf.json  benchmarks.py
cloud_tests/: README.md  conftest.py  copy_data_to_fs.py
cloud_tests/data/almanac_exception/: index_missing_primary.yml  standalone_source_catalog.yml
cloud_tests/data/pixel_trees/: aligned_2_3_outer.csv  pixel_tree_1.csv  pixel_tree_2.csv
cloud_tests/data/small_sky/: partition_info.csv
cloud_tests/data/small_sky_source/: catalog_info.json  partition_info.csv
cloud_tests/hipscat/: conftest.py
cloud_tests/hipscat/catalog/: test_catalog_abfs.py  test_catalog_cloud.py  test_catalog_info_abfs.py  test_catalog_info_cloud.py  test_partition_info_abfs.py  test_partition_info_cloud.py
cloud_tests/hipscat/inspection/: test_almanac_abfs.py  test_almanac_cloud.py  test_almanac_info_abfs.py  test_almanac_info_cloud.py  test_visualize_catalog_abfs.py  test_visualize_catalog_cloud.py
cloud_tests/hipscat/io/: conftest.py  test_write_metadata_abfs.py  test_write_metadata_cloud.py
docs/: .gitignore  Makefile  api.rst  conf.py  getting_started.rst  index.rst  notebooks.rst  requirements.txt
docs/_static/: custom.css
docs/guide/: contributing.rst  directory_scheme.rst  pixel_math.md
docs/notebooks/: catalog_size_inspection.ipynb  cone_search.ipynb
docs/source/: api.rst  conf.py  index.rst
graphs/summary/: benchmarks.MetadataSuite.time_load_partition_info_order6.json  benchmarks.MetadataSuite.time_load_partition_info_order7.json  benchmarks.MetadataSuite.time_load_partition_join_info.json  benchmarks.Suite.time_inner_pixel_alignment.json  benchmarks.Suite.time_outer_pixel_alignment.json  benchmarks.Suite.time_paths_creation.json  benchmarks.Suite.time_pixel_tree_creation.json  benchmarks.time_test_alignment_even_sky.json  benchmarks.time_test_cone_filter_multiple_order.json
src/: .pylintrc
src/catalog/: catalog.py
src/cpp/: pixel_math.cpp  pixel_math.h
src/hats/: __init__.py
src/hats/catalog/: __init__.py  catalog.py  catalog_info.py  catalog_type.py  partition_info.py
src/hats/inspection/: __init__.py  almanac.py  almanac_info.py  visualize_catalog.py
src/hats/io/: __init__.py  parquet_metadata.py  paths.py  validation.py  write_metadata.py
src/hats/loaders/: __init__.py  read_hats.py
src/hats/pixel_math/: __init__.py  box_filter.py  cone_filter.py  filter.py  healpix_pixel.py  healpix_pixel_convertor.py  healpix_pixel_function.py  hipscat_id.py  margin_bounding.py  partition_stats.py  pixel_margins.py  polygon_filter.py  spatial_index.py  validators.py
src/hats/pixel_tree/: moc_filter.py  negative_tree.py  pixel_alignment.py  pixel_tree.py
src/hipscat/: __init__.py
src/hipscat/ADASS_Tutorial/: credentials.json  credentials.py
src/hipscat/catalog/: __init__.py  catalog.py  catalog_info.py  catalog_parameters.py  catalog_type.py  partition_info.py  pixel_node.py  pixel_node_type.py  pixel_tree.py
src/hipscat/inspection/: __init__.py  almanac.py  almanac_info.py  (+4 more)
src/hipscat_cpp/: example.cpp
src/lib/: _bindings.cpp  pixel_math.cpp  pixel_math.h
tests/: .pylintrc  conftest.py
tests/catalog/: test_catalog.py
tests/data/: generate_data.ipynb
tests/hats/: conftest.py
tests/hipscat/: conftest.py
(+363 files in other folders)
