[project]
name = "hipscat"
license = {file = "LICENSE"}
description = "Hierarchical Progressive Survey Catalog"
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = [
    "astropy",
    "fsspec<=2023.9.2", # Used for abstract filesystems
    "healpy",
    "mocpy",
    "numba>=0.58",
    "numpy", 
    "pandas",
    "pyarrow>=14.0.1",
    "typing-extensions>=4.3.0",
]

[project.urls]
"Source Code" = "https://github.com/astronomy-commons/hipscat"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "adlfs", # ablfs filesytem support
    "asv==0.6.3", # Used to compute performance benchmarks
    "black", # auto-formatter
    "jupyter", # clear notebook result cells
    "mypy", # Used for static type checking of files
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pytest-mock", # Used to mock objects in tests
    "pytest-timeout", # Used to test for code efficiency
    "s3fs", # s3 filesystem support
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/hipscat/_version.py"

[tool.pytest.ini_options]
timeout = 1
testpaths = [
    "tests",
]

[tool.coverage.run]
omit=["src/hipscat/_version.py"]

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",

]

ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]
